<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewGreeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:fontFamily="@font/poppins"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="50dp" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama"
        android:fontFamily="@font/poppins_regular"
        android:textSize="18sp"
        android:layout_marginBottom="10dp" />

    <TextView
        android:id="@+id/textViewAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/umur"
        android:fontFamily="@font/poppins_regular"
        android:textSize="18sp"
        android:layout_marginBottom="10dp" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:fontFamily="@font/poppins_regular"
        android:textSize="18sp"
        android:layout_marginBottom="30dp" />

    <TextView
        android:id="@+id/textViewEligibility"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pesan_kelayakan"
        android:fontFamily="@font/poppins_regular"
        android:padding="20dp"
        android:gravity="center"
        android:textSize="16sp" />
</LinearLayout>
